<resources>
    <string name="app_name">Door-to-door</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="text_main_interview">Interview</string>
    <string name="text_main_election">Election</string>
    <string name="text_add_campaign">Add Campaign</string>
    <string name="title_activity_select_campaign">Select Campaign</string>
    <string name="text_add_street">Add Street</string>
    <string name="title_activity_select_street">Select Street</string>
    <string name="text_add_house">Add House</string>
    <string name="title_activity_select_house">Select House</string>
    <string name="title_activity_reaction">Citizen\'s reaction</string>
    <string name="title_activity_campaign_add">New Campaign</string>
    <string name="title_activity_street_add">New Street</string>
    <string name="title_activity_house_add">New House</string>

    <string name="region">Region</string>
    <string name="rayon">Rayon</string>
    <string name="settlement">Settlement</string>
    <string name="campaign_fio">Firstname, lastname, surname</string>
    <string name="campaign_name">Name</string>

    <string name="street_name">Street\'s Name</string>
    <string name="street_type">Street\'s Type</string>

    <string name="house_number">House\'s Name</string>
    <string name="house_type">House\'s Type</string>

    <string name="add">Add</string>

    <string name="fmt_campaign_name">%1$s - %2$s</string>
    <string name="fmt_settl_full_name">%1$s, %2$s, %3$s</string>

    <string name="fmt_add_something">Add %1$s</string>
    <string name="fmt_select_something">Select %1$s</string>
    <string name="fmt_new_something_male">New %1$s</string>
    <string name="fmt_new_something_female">New %1$s</string>

    <string name="dative_case_house">house</string>
    <string name="dative_case_flat">flat</string>
    <string name="nominative_case_house">house</string>
    <string name="nominative_case_flat">flat</string>
</resources>