<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="15dp"
        android:gravity="top"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/campaign_region"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/region"
            android:height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/campaign_rayon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="50dp"
            android:hint="@string/rayon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/campaign_region"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/campaign_settlement"
            android:layout_width="match_parent"
            android:height="50dp"
            android:layout_height="wrap_content"
            android:hint="@string/settlement"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/campaign_rayon"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/campaign_fio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campaign_fio"
            android:height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/campaign_settlement"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/campaign_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="50dp"
            android:hint="@string/campaign_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/campaign_fio"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_marginTop="50dp"
            android:paddingVertical="20dp"
            android:onClick="onSaveBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/campaign_name"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>